--- a/JavaScript/O Jogo/index.html
+++ b/JavaScript/O Jogo/index.html
@@ -12,12 +12,11 @@
     <div class="container">
         <h1>Pedra, Papel e Tesoura</h1>
         <div class="score-board">
-            <div id="user-label" class="badge">Você</div>
-            <div id="draw-label" class="badge">Empate</div>
-            <div id="computer-label" class="badge">Computador</div>
+            <div id="user-label" class="badge">Você: <br><span id="user-score">0</span></div>
+            <div id="draw-label" class="badge">Empate: <br><span id="draw-score">0</span></div>
+            <div id="computer-label" class="badge">Computador: <br><span id="computer-score">0</span></div>
         </div>
         <div class="result">
-            <span id="user-score">0</span>:<span id="draw-score">0</span>:<span id="computer-score">0</span>
             <p>Faça sua escolha!</p>
         </div>
         <div class="choices">
